--- a/web-app/home.html
+++ b/web-app/home.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Akshay Kumar S - DevOps Portfolio</title>
     <style>
+        /* Add your CSS styles here */
         body {
             font-family: Arial, sans-serif;
             background-color: #f2f2f2;
@@ -13,7 +14,7 @@
         }
 
         header {
-            background-color: black;
+            background-color: #007bff;
             color: white;
             padding: 20px;
             text-align: center;
@@ -62,7 +63,7 @@
         }
 
         footer {
-            background-color: black;
+            background-color: #007bff;
             color: white;
             text-align: center;
             padding: 10px;
@@ -74,10 +75,10 @@
         <h1>Akshay Kumar S</h1>
     </header>
     <nav>
-        <a href="home.html">Home</a>
         <a href="#about">About</a>
         <a href="#projects">Projects</a>
         <a href="#contact">Contact</a>
+        <a href="index.html">Portfolio</a>
     </nav>
     <div class="container" id="about">
         <h2>About Me</h2>
