--- a/web-app/projects.html
+++ b/web-app/projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Akshay Kumar S - DevOps Portfolio</title>
+    <title>Sample Projects</title>
     <style>
         /* Add your CSS styles here */
         body {
@@ -23,22 +23,6 @@
         h1 {
             margin: 0;
             font-size: 36px;
-        }
-
-        nav {
-            text-align: center;
-            padding: 20px;
-        }
-
-        nav a {
-            text-decoration: none;
-            color: #007bff;
-            font-size: 20px;
-            margin: 10px;
-        }
-
-        nav a:hover {
-            text-decoration: underline;
         }
 
         .container {
@@ -72,31 +56,21 @@
 </head>
 <body>
     <header>
-        <h1>Akshay Kumar S</h1>
+        <h1>Sample Projects</h1>
     </header>
-    <nav>
-        <a href="#about">About</a>
-        <a href="#projects">Projects</a>
-        <a href="#contact">Contact</a>
-        <a href="index.html">Portfolio</a>
-    </nav>
-    <div class="container" id="about">
-        <h2>About Me</h2>
-        <p>I am a DevOps engineer with expertise in automating and streamlining deployment and infrastructure processes. I am passionate about creating efficient and scalable solutions for software development and deployment.</p>
-    </div>
-    <div class="container" id="projects">
-        <h2>Projects</h2>
+    <div class="container">
         <div class="project">
-            <h2>Project 1: Example Project</h2>
-            <p>Description of Project 1 goes here.</p>
+            <h2>Project 1: Automated Deployment Pipeline</h2>
+            <p>This project involved designing and implementing an automated deployment pipeline using tools like Jenkins and Docker. It resulted in a significant reduction in deployment times and increased overall system reliability.</p>
         </div>
         <div class="project">
-            <h2>Project 2: Another Project</h2>
-            <p>Description of Project 2 goes here.</p>
+            <h2>Project 2: Infrastructure as Code (IAC)</h2>
+            <p>In this project, I utilized Infrastructure as Code principles with tools like Terraform to provision and manage cloud resources efficiently. This approach enabled rapid scaling and infrastructure consistency.</p>
         </div>
+        <a href="index.html">Home</a>
     </div>
     <footer>
-        &copy; 2023 Akshay Kumar S - DevOps Engineer Portfolio
+        &copy; 2023 Your Name
     </footer>
 </body>
 </html>
