--- a/web-app/index.html
+++ b/web-app/index.html
@@ -74,9 +74,9 @@
         <h1>Akshay Kumar S</h1>
     </header>
     <nav>
-        <a href="home.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="#about">About</a>
-        <a href="#projects">Projects</a>
+        <a href="projects.html">Projects</a>
         <a href="#contact">Contact</a>
     </nav>
     <div class="container" id="about">
